--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "npm install",
-    "server" : "node index.js"
+    "build": "npm install",
+    "server": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "free-translate": "^0.6.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "serverless-http": "^3.2.0"
   }
 }
